--- a/assets/styles/curso.css
+++ b/assets/styles/curso.css
@@ -9,8 +9,21 @@ main .container {
   margin: 0 0px 0 202px;
   height: 542px;
   padding-right: 470px;
+}
+
+#curso_invest {
   background: url(../images/investimento.png) right center no-repeat;
   background-size: 380px 381px;
+}
+
+#curso_poupando {
+  background: url(../images/poupando.png) right top no-repeat;
+  background-size: 380px 381px;
+}
+
+#curso_indep {
+  background: url(../images/independencia.png) right top no-repeat;
+  background-size: auto;
 }
 
 .banner h1 {
@@ -88,13 +101,19 @@ video{
 @media only screen and (max-width: 1130px) {
   .banner {
     padding: 0;
-    background: none;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
   }
+
+  #curso_invest,
+  #curso_poupando,
+  #curso_indep {
+    background: none;
+  }
+
   .aulas {
     display: flex;
     flex-direction: column;
@@ -132,6 +151,7 @@ video{
     padding: 0 20px 0 30px;
     height: auto;
     align-items: flex-start;
+    width: 100%;
   }
 
   .banner h1 {
@@ -151,4 +171,3 @@ video{
     width: 98%;
     height: auto;
   }
-}
