--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -26,6 +26,12 @@ header h2 a {
     height: 77px;
 }
 
+header nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 header nav ul {
     display: flex;
     justify-content: center;
@@ -41,12 +47,14 @@ header nav ul li {
 }
 
 header nav a {
+    display: block;
     color: #FDFDFD;
     text-decoration: none;
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
     padding: 0 10px 0 30px;
+    margin-top: 20px;
 }
 
 footer {
