--- a/assets/styles/cursos.css
+++ b/assets/styles/cursos.css
@@ -89,10 +89,8 @@ main section span {
   margin-bottom: 0;
 }
 
-/* iPad mini */
+/* tablet */
 @media only screen and (max-width: 1060px) {
-
- 
 
   #investimento,
   #poupando,
